# zero2prod

./: .env  Cargo.toml  README.md  configuration.yaml
scripts/: init_db.sh
src/: lib.rs  main.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
