[package]
authors = ["cLazyZombie <rusad96@gmail.com>"]
edition = "2018"
name = "zero2prod"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2"
actix-web = "4.0.0-beta.4"
serde = "1.0"

[dev-dependencies]
reqwest = "0.11"
